<resources>
    <string name="app_name">Kitchen Kompanion</string>
    <string name="list">Lists</string>
    <string name="pantry">Pantry</string>
    <string name="recipes">Recipes</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="user_type">User Type</string>
    <string name="select">Select</string>
    <string name="user_types">User Types</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="textview">TextView</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="all">All</string>
    <string name="add_ingredients_to_list">Add Ingredients to List</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="user_color">User Color</string>
    <string name="fridge">Fridge</string>
    <string name="freezer">Freezer</string>
    <string-array name="user_type_options">
        <item>Roommate</item>
        <item>Family - Parent</item>
        <item>Family - Child</item>
        <item>Adult</item>
    </string-array>
    <string-array name="user_color_options">
        <item>Blue</item>
        <item>Green</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="location_options">
        <item>Pantry</item>
        <item>Fridge</item>
        <item>Freezer</item>
    </string-array>
    <string name="food_location">Food Location</string>
    <string name="favorites">Favorites</string>
    <string name="list_2">List 2</string>
    <string name="list_3">List 3</string>
    <string name="list_1">List 1</string>
    <string name="add_item">Add Item</string>
    <string name="units">Units</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="expiration_date">Best By (MM/DD/YYYY)</string>
    <string name="cancel">Cancel</string>
    <string name="move">Move</string>
</resources>