<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/list" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_chef_hat"
        android:title="@string/recipes" />

    <item
        android:id="@+id/navigation_pantry"
        android:icon="@drawable/ic_fridge"
        android:title="Food" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/calendar" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>